Fixed details tab on days when viewed on mobile

--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ body {
 #weekTab #weekContainer #dayForecastContainer #dayForecastCard{
     background-color: rgba(102, 37, 73, 1);
     width: 18dvw;
-    height: 12dvh;
+    height: 11dvh;
     border-radius: 20px;
     display: flex;
     justify-content: flex-start;
